<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88DC94"
    android:backgroundTint="#88DC94"
    tools:context=".Donation">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="165dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:text="CHARITY"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="564dp"
        android:layout_height="542dp"
        android:layout_marginTop="276dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baground" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="99dp"
        android:layout_height="95dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_local_hospital_24" />

    <Button
        android:id="@+id/button1"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:layout_marginTop="140dp"
        android:backgroundTint="#128C7E"
        android:text="@string/hospital"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="134dp"
        android:layout_height="54dp"
        android:layout_marginTop="380dp"
        android:backgroundTint="#128C7E"
        android:text="@string/orphanage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:layout_marginTop="140dp"
        android:backgroundTint="#128C7E"
        android:text="@string/school"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="132dp"
        android:layout_height="58dp"
        android:layout_marginTop="380dp"
        android:backgroundTint="#128C7E"
        android:text="@string/foundation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="108dp"
        android:layout_height="93dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_school_24" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="97dp"
        android:layout_height="115dp"
        android:layout_marginTop="456dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.735"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foundation" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="101dp"
        android:layout_height="86dp"
        android:layout_marginTop="472dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orhphan" />

</androidx.constraintlayout.widget.ConstraintLayout>